--- a/welcome.yml
+++ b/welcome.yml
@@ -2,4 +2,8 @@ name: Post welcome comment
 on:
   pull_request:
    types: [opened]
+jobs:
+  build:
+    name: Post welcome comment
+    runs-on: ubuntu-latest
   
